--- a/ProjectHost/Views/Shared/_Layout.cshtml
+++ b/ProjectHost/Views/Shared/_Layout.cshtml
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Project Host</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body>
@@ -21,8 +20,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Projects", "Index", "Projects")</li>
-                    <li>@Html.ActionLink("Releases", "Index", "Releases")</li>
+                    <li>@Html.ActionLink("Projects", "Index", "Projects", new { id = (object)null }, new { })</li>
+                    <li>@Html.ActionLink("Releases", "Index", "Releases", new { id = (object)null }, new { })</li>
+                    <li><a href="https://www.github.com/andrewboudreau/projecthost">GitHub</a></li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -31,13 +31,12 @@
     <div class="container body-content">
         @RenderBody()
         @*<hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Project Host</p>
-        </footer>*@
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Project Host</p>
+            </footer>*@
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/javascript")
     @RenderSection("scripts", required: false)
 </body>
 </html>
