--- a/ProjectHost/Views/Projects/Index.cshtml
+++ b/ProjectHost/Views/Projects/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using ProjectHost.Models
+﻿@using ProjectHost.HtmlExtensions
+@using ProjectHost.Models
 @model IEnumerable<Project>
 
 @{
@@ -18,7 +19,7 @@
             @if (latestRelease[project] != null)
             {
                 <span style="font-size: 18px;">
-                    <a href="@(latestRelease[project].DownloadUrl)" target="_blank">Download Latest Release &nbsp;@(latestRelease[project].Version)</a>
+                    @Html.DownloadReleaseLink(latestRelease[project], "Download Latest Release " + latestRelease[project].Version))
                 </span>
                 <p>@latestRelease[project].Notes</p>
             }
