--- a/ProjectHost/Views/Shared/_Layout.cshtml
+++ b/ProjectHost/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Projects", "Index", "Projects", new { id = (object)null }, new { })</li>
                     <li>@Html.ActionLink("Releases", "Index", "Releases", new { id = (object)null }, new { })</li>
+                    <li>@Html.ActionLink("RSS", "Index", "Rss", new { id = (object)null }, new { })</li>
                     <li><a href="https://www.github.com/andrewboudreau/projecthost">GitHub</a></li>
                 </ul>
                 @Html.Partial("_LoginPartial")
